--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,8 @@ p {
     font-size: 16px;
 }
 
-.hero {
+/*.hero changed to figure.*/ 
+figure {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
