Polishing up the main content and the content set aside

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,13 +73,15 @@ figure {
     margin-left: 25px;
 }
 
-.content {
+/*.content changed to main.*/
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
+/*.benefits*/
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -138,7 +140,8 @@ figure {
     max-width: 150px;
 }
 
-.search-engine-optimization {
+/*.search-engine-optimization*/
+section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -147,7 +150,7 @@ figure {
     color: #ffffff;
 }
 
-.online-reputation-management {
+/*.online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -163,26 +166,28 @@ figure {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-}
+}*/
 
-.search-engine-optimization img {
+/*.search-engine-optimization*/
+section img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
+/*.online-reputation-management img {
     max-height: 200px;
 }
 
 .social-media-marketing img {
     max-height: 200px;
-}
+}*/
 
-.search-engine-optimization h2 {
+/*.search-engine-optimization*/
+section h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
+/*.online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -190,7 +195,7 @@ figure {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
+}*/
 
 .footer {
     padding: 30px;
