--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,28 @@ main {
     margin-left: 20px;
 }
 
-/*.benefits*/
+/*.search-engine-optimization along with .online-reputation-management and .social-media-marketing were condensed into main section.*/
+main section {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+/*.search-engine-optimization along with .online-reputation-management and .social-media-marketing were condensed into main section img.*/
+main section img {
+    max-height: 200px;
+}
+
+/*.search-engine-optimization along with .online-reputation-management and .social-media-marketing were condensed into main section h2.*/
+main section h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/*.benefits class changed to aside.*/
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -92,118 +113,33 @@ aside {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+/*.benefit-lead, .benefit-brand, .benefit-cost condensed into aside section.*/
+aside section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+/*.benefit-lead, .benefit-brand, .benefit-cost condensed into aside section h3.*/
+aside section h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+/*.benefit-lead, .benefit-brand, .benefit-cost condensed into aside section img.*/
+aside section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-/*.search-engine-optimization*/
-section {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-/*.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}*/
-
-/*.search-engine-optimization*/
-section img {
-    max-height: 200px;
-}
-
-/*.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}*/
-
-/*.search-engine-optimization*/
-section h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-/*.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}*/
-
-.footer {
+/*.footer class changed to footer tag.*/
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
